<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.terralogic.alexle.ott.controller.dialogs.EditAccountDialogFragment">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_dialog_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/edit_dialog_first_name"/>
            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name"
                android:layout_alignParentStart="true"
                android:inputType="text"/>
            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_first_name"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/edit_dialog_vertical_dimen"
                android:text="@string/edit_dialog_last_name"/>
            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name"
                android:layout_alignParentStart="true"
                android:inputType="text"/>
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_last_name"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/edit_dialog_vertical_dimen"
                android:text="@string/edit_dialog_sex"/>
            <RadioGroup
                android:id="@+id/group_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sex"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_dialog_male"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/edit_dialog_female"/>
                <RadioButton
                    android:id="@+id/sex_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/edit_dialog_other"/>
            </RadioGroup>
            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_sex"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/edit_dialog_vertical_dimen"
                android:text="@string/edit_dialog_birthday"/>
            <TextView
                android:id="@+id/input_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/birthday"
                android:layout_alignBottom="@+id/birthday"
                android:layout_marginStart="20dp"
                android:text="@string/edit_dialog_input_birthday"/>
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/edit_dialog_vertical_dimen"
                android:text="@string/edit_dialog_country"/>
            <EditText
                android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country"
                android:layout_alignParentStart="true"
                android:inputType="text"/>
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_country"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/edit_dialog_vertical_dimen"
                android:text="@string/edit_dialog_city"/>
            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:layout_alignParentStart="true"
                android:inputType="text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/input_city"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_dialog_update"
                        android:textColor="@color/login_button_text_color"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_dialog_cancel"
                        android:textColor="@color/login_button_text_color"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
