<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.terralogic.alexle.ott.controller.ChangePasswordDialogFragment">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password_dialog_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:padding="20dp">
        <EditText
            android:id="@+id/input_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:hint="@string/change_password_dialog_old_password"/>
        <EditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_old_password"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:hint="@string/change_password_dialog_new_password"/>
        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_new_password"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:hint="@string/change_password_dialog_confirm_new_password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/input_confirm_password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <LinearLayout
            android:id="@+id/btn_change_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_dialog_change"
                    android:textColor="@color/login_button_text_color"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_dialog_cancel"
                    android:textColor="@color/login_button_text_color"
                    android:textSize="15sp"/>
            </LinearLayout></LinearLayout>
    </RelativeLayout>

</RelativeLayout>
